force-app/main/default/objects/Lead/fields/Primary_Purpose_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Purpose_of_Visit__c</fullName>
    <label>Primary Purpose of Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Purpose_of_Visit</valueSetName>
    </valueSet>
</CustomField>