force-app/main/default/objects/Lead/fields/Purpose_of_Visit_EOC_TS__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Visit_EOC_TS__c</fullName>
    <description>For the EOC and TS Program.  What is the purpose of the visit?</description>
    <inlineHelpText>For the EOC and TS Program.  What is the purpose of the visit?</inlineHelpText>
    <label>Purpose of Visit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Loan Assistance </fullName>
            </value>
            <value>
                <fullName>Scholarship </fullName>
            </value>
            <value>
                <fullName>Use resources </fullName>
            </value>
            <value>
                <fullName>Admission application assistance</fullName>
            </value>
            <value>
                <fullName>Education info</fullName>
            </value>
            <value>
                <fullName>FA application assistance</fullName>
            </value>
            <value>
                <fullName>Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>