force-app/main/default/objects/Lead/fields/Record_Type_ID_Opp__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID_Opp__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Record Type ID - Opp</label>
    <length>40</length>
    <type>Text</type>
</CustomField>