force-app/main/default/objects/Lead/fields/Satellite_Intake_Location_EOC__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Intake_Location_EOC__c</fullName>
    <label>Center or Satellite Location (EOC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPS_Satellite_Location_EOC</valueSetName>
    </valueSet>
</CustomField>