force-app/main/default/objects/Lead/fields/School_Other__c.field-meta.xml
<CustomField>
    <fullName>School_Other__c</fullName>
    <label>School (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>