force-app/main/default/objects/Lead/fields/Schools_Worried__c.field-meta.xml
<CustomField>
    <fullName>Schools_Worried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schools Worried</label>
    <type>Checkbox</type>
</CustomField>