force-app/main/default/objects/Lead/fields/Sign_On_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Sign_On_DateTime__c</fullName>
    <label>Sign On DateTime</label>
    <type>DateTime</type>
</CustomField>