force-app/main/default/objects/Lead/fields/SSN_Text__c.field-meta.xml
<CustomField>
    <fullName>SSN_Text__c</fullName>
    <label>SSN Text</label>
    <length>9</length>
    <type>Text</type>
</CustomField>