force-app/main/default/objects/Lead/fields/Statement_of_Need__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Need__c</fullName>
    <label>Statement of Need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Advising</fullName>
            </value>
            <value>
                <fullName>ACT/SAT Test Prep</fullName>
            </value>
            <value>
                <fullName>Career Counseling/Majors</fullName>
            </value>
            <value>
                <fullName>Career Field Trips</fullName>
            </value>
            <value>
                <fullName>College Admissions</fullName>
            </value>
            <value>
                <fullName>College Campus Visits</fullName>
            </value>
            <value>
                <fullName>College Prep Workshops</fullName>
            </value>
            <value>
                <fullName>Essay Writing</fullName>
            </value>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>Study Skills</fullName>
            </value>
            <value>
                <fullName>Tutoring in</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>