force-app/main/default/objects/Lead/fields/Talent_Search_School__c.field-meta.xml
<CustomField>
    <fullName>Talent_Search_School__c</fullName>
    <label>School</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Talent_Search_Target_Schools</valueSetName>
    </valueSet>
</CustomField>