force-app/main/default/objects/Lead/fields/The_1_Trillion_Problem__c.field-meta.xml
<CustomField>
    <fullName>The_1_Trillion_Problem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The $1 Trillion Problem</label>
    <type>Checkbox</type>
</CustomField>