force-app/main/default/objects/Lead/fields/The_Class_of_2013__c.field-meta.xml
<CustomField>
    <fullName>The_Class_of_2013__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Class of 2013</label>
    <type>Checkbox</type>
</CustomField>