force-app/main/default/objects/Lead/fields/Tutoring_Topic__c.field-meta.xml
<CustomField>
    <fullName>Tutoring_Topic__c</fullName>
    <label>Tutoring Topic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>