force-app/main/default/objects/Lead/fields/Type_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_interest__c</fullName>
    <label>Type of interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default Rate</fullName>
            </value>
            <value>
                <fullName>MM101</fullName>
            </value>
            <value>
                <fullName>FinLit</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>