force-app/main/default/objects/Lead/fields/Unqualify_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualify_Close_Reason__c</fullName>
    <description>Have user provide the reason why this Lead is being Unqualified or Closed.</description>
    <inlineHelpText>Please provide the reason why this Lead is being Unqualified or Closed.</inlineHelpText>
    <label>Unqualify/Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Limited enrollment/opportunity</fullName>
            </value>
            <value>
                <fullName>Student inquiry</fullName>
            </value>
            <value>
                <fullName>In contract with competitor</fullName>
            </value>
            <value>
                <fullName>Looking for immediate CDR reduction product</fullName>
            </value>
            <value>
                <fullName>Already in discussions with Prospect</fullName>
            </value>
            <value>
                <fullName>Lead is not decision maker</fullName>
            </value>
            <value>
                <fullName>Currently has a solution (homegrown/free resource)</fullName>
            </value>
            <value>
                <fullName>For-Profit entity</fullName>
            </value>
            <value>
                <fullName>Unable/Unwilling to include decision maker</fullName>
            </value>
            <value>
                <fullName>No Loan Borrowers</fullName>
            </value>
            <value>
                <fullName>Not interested at this time</fullName>
            </value>
            <value>
                <fullName>Retired/No Longer at Institution</fullName>
            </value>
            <value>
                <fullName>Return to Marketing - Nurture Further</fullName>
            </value>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>