force-app/main/default/objects/Lead/fields/Value_to_ASA__c.field-meta.xml
<CustomField>
    <fullName>Value_to_ASA__c</fullName>
    <label>Value to ASA</label>
    <type>TextArea</type>
</CustomField>