force-app/main/default/objects/Lead/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child of Active Duty US Military</fullName>
            </value>
            <value>
                <fullName>Spouse of Active Duty US Military</fullName>
            </value>
            <value>
                <fullName>Active Duty US Military</fullName>
            </value>
            <value>
                <fullName>US Veteran</fullName>
            </value>
            <value>
                <fullName>Not a Veteran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>