force-app/main/default/objects/Lead/fields/Was_Lead__c.field-meta.xml
<CustomField>
    <fullName>Was_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Hidden field for marking the converted account as having originated from a lead conversion.</description>
    <inlineHelpText>Hidden field for marking the converted account as having originated from a lead conversion.</inlineHelpText>
    <label>Was Lead?</label>
    <type>Checkbox</type>
</CustomField>