force-app/main/default/objects/Lead/fields/X10_Facts_You_Need_to_Know_About_Studen__c.field-meta.xml
<CustomField>
    <fullName>X10_Facts_You_Need_to_Know_About_Studen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>10 Facts You Need to Know About Student</label>
    <type>Checkbox</type>
</CustomField>