force-app/main/default/objects/Lead/fields/X3_Things_Schools_Can_Do_This_Year__c.field-meta.xml
<CustomField>
    <fullName>X3_Things_Schools_Can_Do_This_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3 Things Schools Can Do This Year</label>
    <type>Checkbox</type>
</CustomField>