force-app/main/default/objects/Lead/fields/X3rd_Party_Content_University_Business__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Content_University_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party Content University Business</label>
    <type>Checkbox</type>
</CustomField>