force-app/main/default/objects/Lead/recordTypes/Business_Development.recordType-meta.xml
<RecordType>
    <fullName>Business_Development</fullName>
    <active>true</active>
    <businessProcess>School Strategy</businessProcess>
    <description>School Client Leads</description>
    <label>Business Development</label>
</RecordType>