force-app/main/default/objects/Lead/recordTypes/Strategic_Partnership.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partnership</fullName>
    <active>true</active>
    <businessProcess>School Strategy</businessProcess>
    <description>Strategic Partnership Leads</description>
    <label>Strategic Partnership</label>
</RecordType>