force-app/main/default/objects/Lead/validationRules/Closed_Lead_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lead_Requires_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL(Status, &quot;Unqualified / Closed&quot;),OR(ISBLANK(TEXT(Unqualify_Close_Reason__c))))</errorConditionFormula>
    <errorDisplayField>Unqualify_Close_Reason__c</errorDisplayField>
    <errorMessage>If the Lead Status is being Closed, you must provide a reason.</errorMessage>
</ValidationRule>