force-app/main/default/objects/Lead/listViews/Business_Development_Open_Leads.listView-meta.xml
<ListView>
    <fullName>Business_Development_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business_Development</value>
    </filters>
    <label>Business Development Open Leads</label>
    <sharedTo>
        <group>BD_Management</group>
        <role>TopLevel</role>
    </sharedTo>
</ListView>